--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,7 +12,7 @@
       .main-header {
         width: 100%;
         height: 3.5rem;
-        background-color: rgb(10, 158, 10);
+        background-color: green;
         padding: 0 1.5rem;
       }
 
@@ -36,13 +36,17 @@
 
       .main-header-item a {
         text-decoration: none;
-        color: rgb(0, 0, 0);
+        color: white;
       }
 
       .main-header__item a:hover,
       .main-header__item a:active,
       .main-header__item a.active {
-        color: rgb(255, 151, 151);
+        color: yellow;
+      }
+      
+      .main-header__item a.inactive {
+        color: white;
       }
 
       .product-form {
