--- a/views/get-product.pug
+++ b/views/get-product.pug
@@ -7,18 +7,17 @@ html(lang="en")
     title Admin Area
     link(rel="stylesheet", href="/css/main.css")
   body 
-      header.main-header
-        nav.main-header__nav
-          ul.main-header__item-list
-            li.main-header__item
-              a.inactive(href="/") Shop
-            li.main-header__item
-              a.active(href="/admin/add-product") Add Product
+    header.main-header
+      nav.main-header__nav
+        ul.main-header__item-list
+          li.main-header__item
+            a.inactive(href="/") Shop
+          li.main-header__item
+            a.active(href="/admin/add-product") Add Product
   
-      main
-        form.product-form(action="/admin/add-product" method="POST")
-          div.form-control
-            label(for="title") Title
-              input(type="text" name="title" id="title")
-
-          button(type="submit") Add Product
+    main
+      form.product-form(action="/admin/add-product" method="POST")
+        div.form-control
+          label(for="title") Title
+          input(type="text" name="title")#title
+        button(type="submit") Add Product
