fixed nesting in 404

--- a/views/page-not-found.pug
+++ b/views/page-not-found.pug
@@ -6,13 +6,13 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Error! You got nowhere!
     link(rel="stylesheet", href="/css/main.css")
-    
-  header.main-header
-    nav.main-header__nav
-      ul.main-header__item-list
-        li.main-header__item
-          a.inactive(href="/") Shop
-        li.main-header__item
-          a.inactive(href="/admin/add=product") Add Product
-  body
-    h1 Page not found!
+  body  
+    header.main-header
+      nav.main-header__nav
+        ul.main-header__item-list
+          li.main-header__item
+            a.inactive(href="/") Shop
+          li.main-header__item
+            a.inactive(href="/admin/add=product") Add Product
+    main
+      h1 Page not found!
