--- a/views/page-not-found.pug
+++ b/views/page-not-found.pug
@@ -1,4 +1,8 @@
+//- uses the regenerative-page file as template as to what render in this page
 extends layouts/regenerative-page.pug
 
+//- fills the block content of the template page with this content
+//- note: since this page is using another, it uses the "block" keyword to
+//- inject whatever content is written here inside the template
 block content 
     h1 Page not found!
