migration to ejs (sadly)

--- a/views/page-not-found.pug
+++ b/views/page-not-found.pug
@@ -5,4 +5,4 @@ extends layouts/regenerative-page.pug
 //- note: since this page is using another, it uses the "block" keyword to
 //- inject whatever content is written here inside the template
 block content 
-    h1.not-found Page not found!
+    h1.not-found #{pageTitle}
