--- a/views/page-not-found.ejs
+++ b/views/page-not-found.ejs
@@ -1,5 +1,7 @@
 <%- include('includes/head.ejs') %>
 	<body>
 		<%- include('includes/top-bar.ejs') %>
-		<h1 class="not-found">Page not found!</h1>
+		<main>
+			<h1 class="not-found">Page not found!</h1>
+		</main>
 		<%- include('includes/footer.ejs') %>
