refactored routing and added subfolders and files

--- a/views/admin/admin-product.ejs
+++ b/views/admin/admin-product.ejs
@@ -1,6 +1,6 @@
-<%- include('includes/head.ejs') %>
+<%- include('../includes/head.ejs') %>
 	<body>
-		<%- include('includes/top-bar.ejs') %>
+		<%- include('../includes/top-bar.ejs') %>
 
 		<main>
 			<form class="product-form" action="/admin/add-product" method="POST">
