--- a/views/shop/user-product-list.ejs
+++ b/views/shop/user-product-list.ejs
@@ -1,6 +1,6 @@
-<%- include('includes/head.ejs') %>
+<%- include('../includes/head.ejs') %>
 	<body>
-		<%- include('includes/top-bar.ejs') %>
+		<%- include('../includes/top-bar.ejs') %>
 		<main>
 			<% if (leProdo.length > 0) { %>
 			<div class="grid">
@@ -30,4 +30,4 @@
 			<h2>Bruv any books?</h2>
 			<% } %>
 		</main>
-		<%- include('includes/footer.ejs') %>
+		<%- include('../includes/footer.ejs') %>
