--- a/views/includes/top-bar.ejs
+++ b/views/includes/top-bar.ejs
@@ -1,8 +1,11 @@
 <header class="main-header">
 	<nav class="main-header__nav">
 		<ul class="main-header__item-list">
-			<li class="main-header__item"><a class="<%= pageTitle === 'Main Shop Screen' ? 'active' : 'inactive' %>" href="/">Shop</a></li>
-			<li class="main-header__item"><a class="<%= pageTitle === 'Add new books to the shop' ? 'active' : 'inactive' %>" href="/admin/add-product">Add Product</a></li>
+			<li class="main-header__item"><a class="<%= pageTitle === 'Main Shop Screen' ? 'active' : 'inactive' %>"
+					href="/">Shop</a></li>
+			<li class="main-header__item"><a
+					class="<%= pageTitle === 'Add new books to the shop' ? 'active' : 'inactive' %>"
+					href="/admin/add-product">Add Product</a></li>
 		</ul>
 	</nav>
 </header>
