--- a/views/includes/top-bar.ejs
+++ b/views/includes/top-bar.ejs
@@ -1,11 +1,19 @@
 <header class="main-header">
 	<nav class="main-header__nav">
 		<ul class="main-header__item-list">
-			<li class="main-header__item"><a class="<%= pageTitle === 'Main Shop Screen' ? 'active' : 'inactive' %>"
-					href="/">Shop</a></li>
+			<li class="main-header__item"><a class="<%= pageTitle === 'Home' ? 'active' : 'inactive' %>"
+					href="/">Home</a></li>
+			<li class="main-header__item"><a class="<%= pageTitle === 'All items on sale' ? 'active' : 'inactive' %>"
+					href="/products">All Products</a></li>
+			<li class="main-header__item"><a class="<%= pageTitle === 'Shopping Cart' ? 'active' : 'inactive' %>"
+					href="/cart">Cart</a></li>
 			<li class="main-header__item"><a
 					class="<%= pageTitle === 'Add new books to the shop' ? 'active' : 'inactive' %>"
 					href="/admin/add-product">Add Product</a></li>
+			<li class="main-header__item"><a class="<%= pageTitle === 'Edit book details' ? 'active' : 'inactive' %>"
+					href="/admin/edit-product">Edit Product</a></li>
+			<li class="main-header__item"><a class="<%= pageTitle === 'Review all books' ? 'active' : 'inactive' %>"
+					href="/admin/products-list">Review Items</a></li>
 		</ul>
 	</nav>
 </header>
