--- a/views/admin/admin-product.ejs
+++ b/views/admin/admin-product.ejs
@@ -1,15 +1,26 @@
 <%- include('../includes/head.ejs') %>
+
 	<body>
 		<%- include('../includes/top-bar.ejs') %>
 
-		<main>
-			<form class="product-form" action="/admin/add-product" method="POST">
-				<div class="form-control">
-					<label for="title">Title</label><input type="text" name="title" id="title" />
-				</div>
-
-				<button type="submit">Add Product</button>
-			</form>
-		</main>
+			<main>
+				<form class="product-form" action="/admin/add-product" method="POST">
+					<div class="form-control">
+						<label for="title">Title</label><input type="text" name="title" id="title" />
+					</div>
+					<div class="form-control">
+						<label for="imageUrl">Image URL</label><input type="text" name="title" id="image_URL" />
+					</div>
+					<div class="form-control">
+						<label for="description">Description</label><textarea name="title" id="description"
+							rows="3"></textarea>
+					</div>
+					<div class="form-control">
+						<label for="price">Price</label><input type="number" name="price" id="price" />
+					</div>
+					<button type="submit">Add Product</button>
+				</form>
+			</main>
 	</body>
-</html>
+
+	</html>
