--- a/views/shop/user-product-list.ejs
+++ b/views/shop/user-product-list.ejs
@@ -23,7 +23,9 @@
 									</p>
 								</div>
 								<div class="card__actions">
-									<button class="btn">Add to card</button>
+									<form action="/admin/delete-product" method="POST">
+										<button class="btn">Add to card</button>
+									</form>
 								</div>
 							</article>
 							<% } %>
