--- a/views/admin/admin-product.ejs
+++ b/views/admin/admin-product.ejs
@@ -22,6 +22,4 @@
 					<button type="submit">Add Product</button>
 				</form>
 			</main>
-	</body>
-
-	</html>
+			<%- include('../includes/footer.ejs') %>
