finished final version solo

--- a/views/includes/top-bar.ejs
+++ b/views/includes/top-bar.ejs
@@ -7,6 +7,8 @@
 					href="/products">All Products</a></li>
 			<li class="main-header__item"><a class="<%= pageTitle === 'Shopping Cart' ? 'active' : 'inactive' %>"
 					href="/cart">Cart</a></li>
+			<li class="main-header__item"><a class="<%= pageTitle === 'Orders' ? 'active' : 'inactive' %>"
+					href="/orders">Orders</a></li>
 			<li class="main-header__item"><a
 					class="<%= pageTitle === 'Add new books to the shop' ? 'active' : 'inactive' %>"
 					href="/admin/add-product">Add Product</a></li>
