--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,41 +1,43 @@
 <%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/product.css">
+    </head>
 
     <body>
-        <%- include('../includes/top-bar.ejs') %>
+        <%- include('../includes/navigation.ejs') %>
+
             <main>
-                <% if (adminProducts.length> 0) { %>
+                <% if (prods.length > 0) { %>
                     <div class="grid">
-                        <% for (let admino of adminProducts) { %>
+                        <% for (let product of prods) { %>
                             <article class="card product-item">
                                 <header class="card__header">
                                     <h1 class="product__title">
-                                        <%= admino.title %>
+                                        <%= product.title %>
                                     </h1>
                                 </header>
                                 <div class="card__image">
-                                    <img class="product__image" src="<%= admino.imageUrl %>"
-                                        alt="<%= admino.title %>" />
+                                    <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
                                 </div>
                                 <div class="card__content">
-                                    <h2 class="product__price">R$ <%= admino.price %>
+                                    <h2 class="product__price">$
+                                        <%= product.price %>
                                     </h2>
                                     <p class="product__description">
-                                        <%= admino.description %>
+                                        <%= product.description %>
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <form action="/admin/edit-product" method="POST">
-                                        <button class="btn">Edit</button>
-                                    </form>
+                                    <a href="/admin/edit-product" class="btn">Edit</a>
                                     <form action="/admin/delete-product" method="POST">
-                                        <button class="btn">Delete</button>
+                                        <button class="btn" type="submit">Delete</button>
                                     </form>
+
                                 </div>
                             </article>
                             <% } %>
                     </div>
                     <% } else { %>
-                        <h2>Bruv any books?</h2>
+                        <h1>No Products Found!</h1>
                         <% } %>
             </main>
-            <%- include('../includes/footer.ejs') %>
+            <%- include('../includes/end.ejs') %>
