--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,8 +1,6 @@
 <%- include('../includes/head.ejs') %>
+    </head>
 
     <body>
-        <%- include('../includes/top-bar.ejs') %>
-            <main>
-                <h1>Cart!</h1>
-            </main>
-            <%- include('../includes/footer.ejs') %>
+        <%- include('../includes/navigation.ejs') %>
+        <%- include('../includes/end.ejs') %>
