--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -1,8 +1,9 @@
 <%- include('../includes/head.ejs') %>
+    </head>
 
     <body>
-        <%- include('../includes/top-bar.ejs') %>
-            <main>
-                <h1>Orders!</h1>
-            </main>
-            <%- include('../includes/footer.ejs') %>
+        <%- include('../includes/navigation.ejs') %>
+        <main>
+            <h1>Nothing there!</h1>
+        </main>
+        <%- include('../includes/end.ejs') %>
