--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -19,7 +19,7 @@
                                     <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
                                 </div>
                                 <div class="card__content">
-                                    <h2 class="product__price">$
+                                    <h2 class="product__price">R$
                                         <%= product.price %>
                                     </h2>
                                     <p class="product__description">
@@ -27,7 +27,7 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a href="/admin/edit-product/<%= product.id %>?edit=true&price=<%= product.price %>&title=<%= product.title %>&description=<%= product.description %>&imageUrl=<%= product.imageUrl %>"
+                                    <a href="/admin/edit-product/<%= product.id %>?edit=true&price=<%= product.price %>&title=<%= product.title %>&description=<%= product.description %>&imageUrl=<%= product.imageUrl %>&id=<%= product.id %>"
                                         class="btn">Edit</a>
                                     <form action="/admin/delete-product" method="POST">
                                         <button class="btn" type="submit">Delete</button>
