--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -19,13 +19,15 @@
                                     <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
                                 </div>
                                 <div class="card__content">
-                                    <h2 class="product__price">$<%= product.price %>
+                                    <h2 class="product__price">R$ <%= product.price %>
                                     </h2>
                                     <p class="product__description">
                                         <%= product.description %>
                                     </p>
                                 </div>
-                                <%- include('../includes/carterino.ejs', {product: product}) %>
+                                <div class="card__actions">
+                                    <%- include('../includes/carterino.ejs', {product: product}) %>
+                                </div>
                             </article>
                             <% } %>
                     </div>
