--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,4 +1,5 @@
 <%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/cart.css">
     </head>
 
     <body>
@@ -7,10 +8,7 @@
                 <% if (cartItems.length> 0) { %>
                     <ul>
                         <% cartItems.forEach(item=> { %>
-                            <li>
-                                <p>
-                                    <%= item.title %> (<%= item.cartItem.quantity %>)
-                                </p>
+                            <li class="cart__item">
                                 <form action="/cart-delete-item" method="POST">
                                     <input type="hidden" value="<%= item.id %>" name="idOfItemToBeDeleted">
                                     <button class="btn" type="submit">Yeet this item</button>
