--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -9,14 +9,25 @@
                     <ul>
                         <% cartItems.forEach(item=> { %>
                             <li class="cart__item">
+                                <h1>
+                                    <%= item.title %>
+                                </h1>
+                                <h2>Quantity:
+                                    <%= item.cartItem.quantity %>
+                                </h2>
                                 <form action="/cart-delete-item" method="POST">
                                     <input type="hidden" value="<%= item.id %>" name="idOfItemToBeDeleted">
                                     <button class="btn" type="submit">Yeet this item</button>
                                 </form>
                             </li>
-
                             <% }) %>
                     </ul>
+                    <hr>
+                    <div class="centered">
+                        <form action="/create-order" method="POST">
+                            <button type="submit" class="btn">Order Now!</button>
+                        </form>
+                    </div>
                     <% } else { %>
                         <h1>No Products in Cart!</h1>
                         <% } %>
