--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -24,7 +24,7 @@
                     </ul>
                     <hr>
                     <div class="centered">
-                        <form action="/create-order" method="POST">
+                        <form action="/order-this-cart" method="POST">
                             <button type="submit" class="btn">Order Now!</button>
                         </form>
                     </div>
