fixing .id to ._id

--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -30,7 +30,7 @@
                             rows="3"><% if (editing) { %><%= query.description %><% } %></textarea>
                     </div>
                     <% if (editing) { %>
-                        <input type="hidden" value="<%= query.id %>" name="id">
+                        <input type="hidden" value="<%= query._id %>" name="id">
                         <% } %>
                             <button class="btn" type="submit">
                                 <% if (editing) { %>Edit Product<% } else { %>Add Product<%} %>
