--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -9,7 +9,7 @@
                         <% orders.forEach(item=> { %>
                             <li>
                                 <h1>
-                                    Order #<%= item.id %>
+                                    Order #<%= item._id %>
                                 </h1>
                                 <ul>
                                     <% item.products.forEach(product=> { %>
