--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -27,9 +27,9 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a href="/admin/edit-product/<%= product.id %>?edit=true&price=<%= product.price %>&title=<%= product.title %>&description=<%= product.description %>&imageUrl=<%= product.imageUrl %>&id=<%= product.id %>"
+                                    <a href="/admin/edit-product/<%= product._id %>?edit=true&price=<%= product.price %>&title=<%= product.title %>&description=<%= product.description %>&imageUrl=<%= product.imageUrl %>&id=<%= product._id %>"
                                         class="btn">Edit</a>
-                                    <form action="/admin/delete-product/<%= product.id %>" method="POST">
+                                    <form action="/admin/delete-product/<%= product._id %>" method="POST">
                                         <button class="btn" type="submit">Delete</button>
                                     </form>
 
