--- a/views/includes/carterino.ejs
+++ b/views/includes/carterino.ejs
@@ -1,4 +1,4 @@
 <form action="/cart" method="POST">
     <button class="btn" type="submit">Add to Cart</button>
-    <input type="hidden" name="producto" value="<%= product.id %>">
+    <input type="hidden" name="producto" value="<%= product._id %>">
 </form>
