--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -13,7 +13,7 @@
                                     <%= item.title %>
                                 </h1>
                                 <h2>Quantity:
-                                    <%= item.cartItem.quantity %>
+                                    <%= item.quantity %>
                                 </h2>
                                 <form action="/cart-delete-item" method="POST">
                                     <input type="hidden" value="<%= item._id %>" name="idOfItemToBeDeleted">
