--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -4,17 +4,17 @@
     <body>
         <%- include('../includes/navigation.ejs') %>
             <main>
-                <% if (orders.length> 0) { %>
+                <% if (orders.length> 0) { let orderNumber = 0 %>
                     <ul>
                         <% orders.forEach(item=> { %>
                             <li>
                                 <h1>
-                                    Order #<%= item._id %>
+                                    Order #<%= ++orderNumber %>
                                 </h1>
                                 <ul>
-                                    <% item.products.forEach(product=> { %>
+                                    <% item.cart.forEach(product=> { %>
                                         <li>
-                                            <%= product.title %> (<%= product.orderItem.quantity %>)
+                                            <%= product.title %> (<%= product.quantity %>)
                                         </li>
                                         <% }) %>
                                 </ul>
