fixed "/cart" to use the updated ".getCart()" data

--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,36 +1,44 @@
 <%- include('../includes/head.ejs') %>
-    <link rel="stylesheet" href="/css/cart.css">
-    </head>
+<link rel="stylesheet" href="/css/cart.css">
+</head>
 
-    <body>
-        <%- include('../includes/navigation.ejs') %>
-            <main>
-                <% if (cartItems.length> 0) { %>
-                    <ul>
-                        <% cartItems.forEach(item=> { %>
-                            <li class="cart__item">
-                                <h1>
-                                    <%= item.title %>
-                                </h1>
-                                <h2>Quantity:
-                                    <%= item.quantity %>
-                                </h2>
-                                <form action="/cart-delete-item" method="POST">
-                                    <input type="hidden" value="<%= item._id %>" name="idOfItemToBeDeleted">
-                                    <button class="btn" type="submit">Yeet this item</button>
-                                </form>
-                            </li>
-                            <% }) %>
-                    </ul>
-                    <hr>
-                    <div class="centered">
-                        <form action="/order-this-cart" method="POST">
-                            <input type="hidden" value="<%= JSON.stringify(cartItems) %>" name="cartToOrder">
-                            <button type="submit" class="btn">Order Now!</button>
-                        </form>
-                    </div>
-                    <% } else { %>
-                        <h1>No Products in Cart!</h1>
-                        <% } %>
-            </main>
-            <%- include('../includes/end.ejs') %>
+<body>
+  <%- include('../includes/navigation.ejs') %>
+  <main>
+    <% if (cartItems.length> 0) { %>
+    <%# cycle through every item in the user's cart.items array %>
+    <ul>
+      <% cartItems.forEach(item=> { %>
+      <%# for every item inside cart.items, process individual data %>
+      <li class="cart__item">
+        <h1>
+          <%= item.productId.title %>
+          <%# since the item data is nested inside productId, we need to access
+          that property before accessing any other nested properties %>
+        </h1>
+        <h2>Quantity:
+          <%= item.quantity %>
+          <%# quantity isn't nested, unlike the rest %>
+        </h2>
+        <form action="/cart-delete-item" method="POST">
+          <input type="hidden" value="<%= item.productId._id %>" name="idOfItemToBeDeleted">
+          <%# make sure to pull the proper _id inside productId %>
+          <button class="btn" type="submit">Yeet this item</button>
+        </form>
+      </li>
+      <% }) %>
+    </ul>
+    <hr>
+    <div class="centered">
+      <form action="/order-this-cart" method="POST">
+        <input type="hidden" value="<%= JSON.stringify(cartItems) %>" name="cartToOrder">
+        <%# JSON stringify the cart.items data to be used in postOrders. be careful
+        that it will be necessary to also access nested properties in that %>
+        <button type="submit" class="btn">Order Now!</button>
+      </form>
+    </div>
+    <% } else { %>
+    <h1>No Products in Cart!</h1>
+    <% } %>
+  </main>
+  <%- include('../includes/end.ejs') %>
