renabled posting and getting orders

--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -19,7 +19,7 @@
         </h2>
         <ul>
           <% let currentOrderPrice = 0 %>
-          <% item.cart.forEach(product=> { %>
+          <% item.items.forEach(product=> { %>
           <%# Inside the orders matrix, cycle through the products of each
           order %>
           <li>
