--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -15,14 +15,16 @@
       <li class="main-header__item">
         <a class="<%= path === '/orders' ? 'active' : '' %>" href="/orders">Orders</a>
       </li>
-      <!-- <li class="mobile-nav__item">
+      <% if (isAuthenticated == true) { %>
+      <li class="main-header__item">
         <a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add Product
         </a>
       </li>
-      <li class="mobile-nav__item">
+      <li class="main-header__item">
         <a class="<%= path === '/admin/products' ? 'active' : '' %>" href="/admin/products">Admin Products
-      </a>
-  </li> -->
+        </a>
+      </li>
+      <% } %>
     </ul>
     <ul class="main-header__item-list">
       <li class="main-header__item">
@@ -46,14 +48,16 @@
     <li class="mobile-nav__item">
       <a class="<%= path === '/orders' ? 'active' : '' %>" href="/orders">Orders</a>
     </li>
-    <!-- <li class="mobile-nav__item">
+    <% if (isAuthenticated == true) { %>
+    <li class="mobile-nav__item">
       <a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add Product
       </a>
     </li>
     <li class="mobile-nav__item">
       <a class="<%= path === '/admin/products' ? 'active' : '' %>" href="/admin/products">Admin Products
-    </a>
-</li> -->
+      </a>
+    </li>
+    <% } %>
   </ul>
   <ul class="main0header__item-list">
     <li class="main-header__item">
