--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -9,13 +9,13 @@
       <li class="main-header__item">
         <a class="<%= path === '/products' ? 'active' : '' %>" href="/products">Products</a>
       </li>
+      <% if (isAuthenticated == true) { %>
       <li class="main-header__item">
         <a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">Cart</a>
       </li>
       <li class="main-header__item">
         <a class="<%= path === '/orders' ? 'active' : '' %>" href="/orders">Orders</a>
       </li>
-      <% if (isAuthenticated == true) { %>
       <li class="main-header__item">
         <a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add Product
         </a>
@@ -24,13 +24,22 @@
         <a class="<%= path === '/admin/products' ? 'active' : '' %>" href="/admin/products">Admin Products
         </a>
       </li>
-      <% } %>
+    </ul>
+    <ul class="main-header__item-list">
+      <li class="main-header__item">
+        <form action="/disconnect" method="POST">
+          <button class="btn" type="submit">Logout</BUTTon>
+        </form>
+      </li>
+    </ul>
+    <% } else { %>
     </ul>
     <ul class="main-header__item-list">
       <li class="main-header__item">
         <a class="<%= path === '/authenticate' ? 'active' : '' %>" href="/authenticate">Login</a>
       </li>
     </ul>
+    <% } %>
   </nav>
 </header>
 
