--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -1,22 +1,24 @@
 <%- include('../includes/head.ejs') %>
-    </head>
+</head>
 
-    <body>
-        <%- include('../includes/navigation.ejs') %>
-            <main class="centered">
-                <h1>
-                    <%= product.title %>
-                </h1>
-                <hr>
-                <div>
-                    <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
-                </div>
-                <h2>
-                    R$ <%= product.price %>
-                </h2>
-                <p>
-                    <%= product.description %>
-                </p>
-                <%- include('../includes/carterino.ejs') %>
-            </main>
-            <%- include('../includes/end.ejs') %>
+<body>
+  <%- include('../includes/navigation.ejs') %>
+  <main class="centered">
+    <h1>
+      <%= product.title %>
+    </h1>
+    <hr>
+    <div>
+      <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+    </div>
+    <h2>
+      R$ <%= product.price %>
+    </h2>
+    <p>
+      <%= product.description %>
+    </p>
+    <% if (isAuthenticated) { %>
+    <%- include('../includes/carterino.ejs', {product: product}) %>
+    <% } %>
+  </main>
+  <%- include('../includes/end.ejs') %>
