created "sign up" page and set all routes/views

--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -38,6 +38,9 @@
       <li class="main-header__item">
         <a class="<%= path === '/authenticate' ? 'active' : '' %>" href="/authenticate">Login</a>
       </li>
+      <li class="main-header__item">
+        <a class="<%= path === '/register' ? 'active' : '' %>" href="/register">Sign Up</a>
+      </li>
     </ul>
     <% } %>
   </nav>
