--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -18,7 +18,7 @@
       </div>
       <div class="form-control">
         <label for="confirm-password">Confirm Password</label>
-        <input type="password" name="password" id="password">
+        <input type="password" name="passwordConfirmation" id="password">
       </div>
       <button class="btn" type="submit">Register
       </button>
