improved sign up workflow

--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -7,7 +7,7 @@
   <%- include('../includes/navigation.ejs') %>
 
   <main>
-    <form class="login-form" action="/login-attempt" method="POST">
+    <form class="login-form" action="/new-account" method="POST">
       <div class="form-control">
         <label for="email">Username or email</label>
         <input type="email" name="email" id="email">
