created reset oassword page and workflow

--- a/views/auth/passwordReset.ejs
+++ b/views/auth/passwordReset.ejs
@@ -10,21 +10,13 @@
     <% if (authError != undefined) { %>
     <div class="user-message user-message--error"><%= authError %></div>
     <% } %>
-    <form class="login-form" action="/login-attempt" method="POST">
+    <form class="login-form" action="/send-me-new-password" method="POST">
       <div class="form-control">
         <label for="email">Email</label>
         <input type="email" name="email" id="email">
       </div>
-      <div class="form-control">
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password">
-        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-      </div>
-      <button class="btn" type="submit">Login
+      <button class="btn" type="submit">Reset Password
       </button>
     </form>
-    <div class="centered">
-      <a href="/forgot-password">Reset Password</a>
-    </div>
   </main>
   <%- include('../includes/end.ejs') %>
