--- a/views/auth/passwordReset.ejs
+++ b/views/auth/passwordReset.ejs
@@ -14,6 +14,7 @@
       <div class="form-control">
         <label for="email">Email</label>
         <input type="email" name="email" id="email">
+        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
       </div>
       <button class="btn" type="submit">Reset Password
       </button>
