--- a/views/auth/passwordReset.ejs
+++ b/views/auth/passwordReset.ejs
@@ -7,8 +7,10 @@
   <%- include('../includes/navigation.ejs') %>
 
   <main>
-    <% if (authError != undefined) { %>
-    <div class="user-message user-message--error"><%= authError %></div>
+    <% if (passwordResetError != undefined) { %>
+    <div class="user-message user-message--error"><%= passwordResetError %></div>
+    <% } else if (success != undefined) { %>
+    <div class="user-message user-message--success"><%= success %></div>
     <% } %>
     <form class="login-form" action="/send-me-new-password" method="POST">
       <div class="form-control">
