--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -9,6 +9,8 @@
   <main>
     <% if (registerError != undefined) { %>
     <div class="user-message user-message--error"><%= registerError %></div>
+    <% } else if (success != undefined) { %>
+    <div class="user-message user-message--success"><%= success %></div>
     <% } %>
     <form class="login-form" action="/new-account" method="POST">
       <div class="form-control">
