Added validation to "/password-reset"

--- a/views/auth/createNewPassword.ejs
+++ b/views/auth/createNewPassword.ejs
@@ -13,6 +13,9 @@
     <div class="user-message user-message--success"><%= success %></div>
     <% } %>
     <% if (newPasswordError == undefined && success == undefined) { %>
+    <% if (badPassword != undefined) { %>
+    <div class="user-message user-message--error"><%= badPassword %></div>
+    <% } %>
     <form class="login-form" action="/update-old-password" method="POST">
       <div class="form-control">
         <label for="password">Password</label>
