--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -15,19 +15,19 @@
     <form class="login-form" action="/new-account" method="POST">
       <div class="form-control">
         <label for="name">Name</label>
-        <input type="name" name="name" id="name">
+        <input type="name" name="name" value="<%= data.name %>" id="name">
       </div>
       <div class="form-control">
         <label for="email">Email</label>
-        <input type="email" name="email" id="email">
+        <input type="email" name="email" value="<%= data.email %>" id="email">
       </div>
       <div class="form-control">
         <label for="password">Password</label>
-        <input type="password" name="password" id="password">
+        <input type="password" name="password" value="<%= data.password %>" id="password">
       </div>
       <div class="form-control">
         <label for="confirm-password">Confirm Password</label>
-        <input type="password" name="passwordConfirmation" id="password">
+        <input type="password" name="passwordConfirmation" value="<%= data.passwordConfirmation %>" id="password">
       </div>
       <input type="hidden" name="_csrf" value="<%= csrfToken %>">
       <button class="btn" type="submit">Register</button>
