--- a/views/auth/authenticate.ejs
+++ b/views/auth/authenticate.ejs
@@ -7,19 +7,23 @@
   <%- include('../includes/navigation.ejs') %>
 
   <main>
-    <% if (authError != undefined) { %>
-    <div class="user-message user-message--error"><%= authError %></div>
-    <% } else if (success != undefined) { %>
+    <% if (authenticateErrorEmail != undefined) { %>
+    <div class="user-message user-message--error"><%= authenticateErrorEmail %></div>
+    <% }  %>
+    <% if (authenticateErrorPassword != undefined) { %>
+    <div class="user-message user-message--error"><%= authenticateErrorPassword %></div>
+    <% }  %>
+    <% if (success != undefined) { %>
     <div class="user-message user-message--success"><%= success %></div>
     <% } %>
     <form class="login-form" action="/login-attempt" method="POST">
       <div class="form-control">
         <label for="email">Email</label>
-        <input type="email" name="email" id="email">
+        <input type="email" name="email" value="<%= data.email %>" id="email">
       </div>
       <div class="form-control">
         <label for="password">Password</label>
-        <input type="password" name="password" id="password">
+        <input type="password" name="password" value="<%= data.password %>" id="password">
         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
       </div>
       <button class="btn" type="submit">Login
