--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -25,3 +25,25 @@
 .form-control input.invalid {
 	border-color: red;
 }
+
+.user-message {
+	margin: 0.5rem auto;
+	width: 50%;
+	border: 1px solid blue;
+	padding: 0.5rem;
+	border-radius: 3px;
+	background: rgb(101, 101, 178);
+	text-align: center;
+}
+
+.user-message--error {
+	border-color: red;
+	background: rgb(255, 216, 216);
+	color: rgb(228, 0, 0);
+}
+
+.user-message--success {
+	border-color: green;
+	background: rgb(124, 244, 126);
+	color: green;
+}
