--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -23,19 +23,19 @@
       <input type="hidden" name="_csrf" value="<%= csrfToken %>">
       <div class="form-control">
         <label for="title">Title</label>
-        <input type="text" name="title" id="title" value="<% if (editing) { %><%= query.title %><% } %>">
+        <input type="text" name="title" id="title" value="<%= query.title %>">
       </div>
       <div class="form-control">
         <label for="imageUrl">Image URL</label>
-        <input type="text" name="imageUrl" id="imageUrl" value="<% if (editing) { %><%= query.imageUrl %><% } %>">
+        <input type="text" name="imageUrl" id="imageUrl" value="<%= query.imageUrl %>">
       </div>
       <div class="form-control">
         <label for="price">Price</label>
-        <input type="number" name="price" id="price" step="0.01" value="<% if (editing) { %><%= query.price %><% } %>">
+        <input type="number" name="price" id="price" step="0.01" value="<%= query.price %>">
       </div>
       <div class="form-control">
         <label for="description">Description</label>
-        <textarea name="description" id="description" rows="3"><% if (editing) { %><%= query.description %><% } %></textarea>
+        <textarea name="description" id="description" rows="3"><%= query.description %></textarea>
       </div>
       <% if (editing) { %>
       <input type="hidden" value="<%= query.id %>" name="id">
