--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -7,35 +7,35 @@
   <%- include('../includes/navigation.ejs') %>
 
   <main>
-    <% if (newProductErrorTitle != undefined) { %>
-    <div class="user-message user-message--error"><%= newProductErrorTitle %></div>
+    <% if (productErrorTitle != undefined) { %>
+    <div class="user-message user-message--error"><%= productErrorTitle %></div>
     <% } %>
-    <% if (newProductErrorImageUrl != undefined) { %>
-    <div class="user-message user-message--error"><%= newProductErrorImageUrl %></div>
+    <% if (productErrorImageUrl != undefined) { %>
+    <div class="user-message user-message--error"><%= productErrorImageUrl %></div>
     <% } %>
-    <% if (newProductErrorPrice != undefined) { %>
-    <div class="user-message user-message--error"><%= newProductErrorPrice %></div>
+    <% if (productErrorPrice != undefined) { %>
+    <div class="user-message user-message--error"><%= productErrorPrice %></div>
     <% } %>
-    <% if (newProductErrorDescription != undefined) { %>
-    <div class="user-message user-message--error"><%= newProductErrorDescription %></div>
+    <% if (productErrorDescription != undefined) { %>
+    <div class="user-message user-message--error"><%= productErrorDescription %></div>
     <% } %>
     <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<%} %>" method="POST">
       <input type="hidden" name="_csrf" value="<%= csrfToken %>">
       <div class="form-control">
         <label for="title">Title</label>
-        <input type="text" name="title" id="title" value="<%= query.title %>">
+        <input class="<%= productErrorTitle ? 'invalid' : '' %>" type="text" name="title" id="title" value="<%= query.title %>">
       </div>
       <div class="form-control">
         <label for="imageUrl">Image URL</label>
-        <input type="text" name="imageUrl" id="imageUrl" value="<%= query.imageUrl %>">
+        <input class="<%= productErrorImageUrl ? 'invalid' : '' %>" type="text" name="imageUrl" id="imageUrl" value="<%= query.imageUrl %>">
       </div>
       <div class="form-control">
         <label for="price">Price</label>
-        <input type="number" name="price" id="price" step="0.01" value="<%= query.price %>">
+        <input class="<%= productErrorPrice ? 'invalid' : '' %>" type="number" name="price" id="price" step="0.01" value="<%= query.price %>">
       </div>
       <div class="form-control">
         <label for="description">Description</label>
-        <textarea name="description" id="description" rows="3"><%= query.description %></textarea>
+        <textarea class="<%= productErrorDescription ? 'invalid' : '' %>" name="description" id="description" rows="3"><%= query.description %></textarea>
       </div>
       <% if (editing) { %>
       <input type="hidden" value="<%= query.id %>" name="id">
