--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -22,11 +22,8 @@
 	outline-color: #00695c;
 }
 
+.form-control textarea.invalid,
 .form-control input.invalid {
-	border-color: red;
-}
-
-.form-control textarea.invalid {
 	border-color: red;
 }
 
