--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -19,16 +19,20 @@
     <% if (productErrorDescription != undefined) { %>
     <div class="user-message user-message--error"><%= productErrorDescription %></div>
     <% } %>
-    <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<%} %>" method="POST">
+    <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<%} %>" method="POST" enctype="multipart/form-data">
       <input type="hidden" name="_csrf" value="<%= csrfToken %>">
       <div class="form-control">
         <label for="title">Title</label>
         <input class="<%= productErrorTitle ? 'invalid' : '' %>" type="text" name="title" id="title" value="<%= query.title %>">
       </div>
       <div class="form-control">
+        <label for="image">Image URL</label>
+        <input class="<%= productErrorImageUrl ? 'invalid' : '' %>" type="file" name="image" id="image">
+      </div>
+      <%# <div class="form-control">
         <label for="imageUrl">Image URL</label>
         <input class="<%= productErrorImageUrl ? 'invalid' : '' %>" type="text" name="imageUrl" id="imageUrl" value="<%= query.imageUrl %>">
-      </div>
+      </div> %>
       <div class="form-control">
         <label for="price">Price</label>
         <input class="<%= productErrorPrice ? 'invalid' : '' %>" type="number" name="price" id="price" step="0.01" value="<%= query.price %>">
