--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -9,7 +9,7 @@
     </h1>
     <hr>
     <div>
-      <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+      <img src="/<%= product.imagePath %>" alt="<%= product.title %>">
     </div>
     <h2>
       R$ <%= product.price %>
